--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
     "commitizen": "^4.3.1",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-git": "^1.11.1",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
     "husky": "^9.1.7",
