--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^13.0.0",
     "element-plus": "^2.9.6",
     "pinia": "^3.0.1",
     "sass": "^1.85.1",
