--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^13.0.0",
+    "axios": "^1.8.4",
     "element-plus": "^2.9.6",
     "pinia": "^3.0.1",
     "sass": "^1.85.1",
@@ -46,6 +47,7 @@
     "husky": "^9.1.7",
     "jiti": "^2.4.2",
     "lint-staged": "^15.5.0",
+    "msw": "^2.7.4",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
