--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
+    "cropperjs": "^2.0.0",
     "element-plus": "^2.9.6",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
